# adventofcode-2020

aoc1/src/: two.rs
aoc2/: Cargo.toml
aoc4/: Cargo.toml
aoc4/src/: one.rs  two.rs
aoc5/: Cargo.toml
aoc5/src/: main.rs
aoc6/: '  Cargo.toml
aoc6/src/: one.rs  two.rs
day-one/: Cargo.toml
day-one/src/: one.rs
day-three/: Cargo.toml
day-three/src/: one.rs  two.rs
day-two/src/: one.rs  two.rs
