[package]
name = "aoc6"
version = "0.1.0"
authors = ["Allan Calix <acalix0592@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "one"
path = "src/one.rs"

[[bin]]
name = "two"
path = "src/two.rs"

[dependencies]
regex = "*"
